--- a/resources/glade/Browser.glade
+++ b/resources/glade/Browser.glade
@@ -134,6 +134,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
+                            <property name="padding">5</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
