--- a/resources/glade/Browser.glade
+++ b/resources/glade/Browser.glade
@@ -202,6 +202,7 @@
                 <property name="primary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">False</property>
                 <property name="placeholder_text" translatable="yes">Name</property>
+                <signal name="activate" handler="onFilterByFileNameEnter" swapped="no"/>
                 <signal name="search-changed" handler="onFilterByFileName" swapped="no"/>
               </object>
               <packing>
