Change mover layout
* Now the box with target name and folder is stacked vertically

--- a/resources/glade/AddFile.glade
+++ b/resources/glade/AddFile.glade
@@ -36,9 +36,10 @@
               </packing>
             </child>
             <child>
-              <object class="GtkBox">
+              <object class="GtkBox" id="DestinationBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkLabel" id="DestinationLabel">
                     <property name="visible">True</property>
@@ -69,6 +70,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="padding">4</property>
                 <property name="position">2</property>
               </packing>
             </child>
