--- a/resources/glade/Editor.glade
+++ b/resources/glade/Editor.glade
@@ -256,10 +256,12 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="EditTagSelect">
+                  <object class="GtkSearchEntry" id="EditTagSelect">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <signal name="changed" handler="onTagChanged" swapped="no"/>
+                    <property name="can_focus">True</property>
+                    <property name="primary_icon_name">edit-find-symbolic</property>
+                    <property name="primary_icon_activatable">False</property>
+                    <property name="primary_icon_sensitive">False</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -369,9 +371,12 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="DeleteTagSelect">
+                  <object class="GtkSearchEntry" id="DeleteTagSelect">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
+                    <property name="primary_icon_name">edit-find-symbolic</property>
+                    <property name="primary_icon_activatable">False</property>
+                    <property name="primary_icon_sensitive">False</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
